[gd_scene load_steps=2 format=2]

[ext_resource path="res://UI/Motifs/InventoryMotif.gd" type="Script" id=1]

[node name="InventoryMotif" type="Control"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -512.0
margin_top = -384.0
margin_right = 512.0
margin_bottom = 384.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Bg_GridContainer" type="GridContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/vseparation = 8
custom_constants/hseparation = 8
columns = 8
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tx_GridContainer" type="GridContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/vseparation = 8
custom_constants/hseparation = 8
columns = 8
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ItemName_Label" type="Label" parent="."]
margin_right = 108.0
margin_bottom = 14.0
__meta__ = {
"_edit_use_anchors_": false
}
